Base Skeleton ready

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -3,8 +3,10 @@ ignorePaths: []
 dictionaryDefinitions: []
 dictionaries: []
 words:
+  - colums
   - Georgi
   - Phind
   - wght
+  - Yeaeee
 ignoreWords: []
 import: []
