Added font awsome to npm and vite config, started working apps feature, updated readme abit

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -3,11 +3,17 @@ ignorePaths: []
 dictionaryDefinitions: []
 dictionaries: []
 words:
+  - brotli
   - colums
+  - fontawesome
+  - fortawesome
   - Georgi
+  - iconify
   - litle
   - ohyeaa
   - Phind
+  - svgr
+  - unplugin
   - wght
   - xlarge
   - Yeaeee
