--- a/package.json
+++ b/package.json
@@ -25,8 +25,20 @@
   },
   "homepage": "https://github.com/Chugarah/Silicon-AB#readme",
   "devDependencies": {
-    "sass": "^1.78.0",
-    "vite": "^5.4.3"
+    "@iconify/json": "^2.2.250",
+    "@rollup/plugin-babel": "^6.0.4",
+    "rollup": "^4.21.3",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "sass": "^1.79.1",
+    "unplugin-icons": "^0.19.3",
+    "vite": "^5.4.6",
+    "vite-plugin-chunk-split": "^0.5.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-mkcert": "^1.17.6",
+    "vite-plugin-svgr": "^4.2.0"
   },
-   "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0"
+  }
 }
