--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silicon-ab",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "description": "Slutuppgift till HTML & CSS Kurs",
   "main": "index.html",
   "scripts": {
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@iconify/json": "^2.2.250",
     "@rollup/plugin-babel": "^6.0.4",
-    "rollup": "^4.21.3",
+    "rollup": "^4.22.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.79.1",
     "unplugin-icons": "^0.19.3",
@@ -39,6 +39,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.6.0"
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "font-awesome": "^4.7.0"
   }
 }
