Fixed some small bugs, how it works mobile, tablet responsive added

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -3,17 +3,56 @@ ignorePaths: []
 dictionaryDefinitions: []
 dictionaries: []
 words:
+  - accumsan
+  - adipiscing
+  - aenean
+  - aliquam
+  - amet
+  - arcu
+  - auctor
+  - Augue
+  - blandit
   - brotli
   - colums
+  - congue
+  - consectetur
+  - cursus
+  - egestas
+  - eleifend
+  - elementum
+  - enim
+  - etiam
+  - facilisi
+  - facilisis
+  - Faucibus
+  - fermentum
   - fontawesome
   - fortawesome
   - Georgi
   - iconify
+  - imperdiet
+  - justo
+  - lacus
   - litle
+  - luctus
+  - mauris
+  - mollis
+  - nibh
+  - Odio
   - ohyeaa
+  - Pellentesque
   - Phind
+  - pretium
+  - Proin
+  - Sociis
+  - suspendisse
   - svgr
+  - ultrices
+  - ultricies
   - unplugin
+  - vestibulum
+  - volutpat
+  - vulputate
   - webfonts
   - wght
   - xlarge
