Fixed padding, and missing elements in Clients are loving our app section

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -9,17 +9,21 @@ words:
   - aliquam
   - amet
   - arcu
+  - asds
   - auctor
   - Augue
+  - bibendum
   - blandit
   - brotli
   - colums
   - congue
   - consectetur
   - cursus
+  - dictumst
   - egestas
   - eleifend
   - elementum
+  - elementur
   - enim
   - etiam
   - facilisi
@@ -30,27 +34,46 @@ words:
   - fortawesome
   - fvisible
   - Georgi
+  - hendrerit
   - iconify
   - imperdiet
   - justo
   - lacus
+  - Laoreet
+  - lectus
   - litle
   - luctus
   - mauris
   - mollis
   - nibh
+  - Nisl
+  - nulla
+  - nunc
+  - Nunc
   - Odio
   - ohyeaa
+  - orci
+  - ornare
   - Pellentesque
   - Phind
+  - porttitor
+  - posuere
   - pretium
   - Proin
+  - rhoncus
+  - sagittis
+  - senectus
   - Sociis
+  - sollicitudin
   - suspendisse
   - svgr
+  - tempor
+  - tincidunt
+  - turpis
   - ultrices
   - ultricies
   - unplugin
+  - venenatis
   - vestibulum
   - volutpat
   - vulputate
