FAQ Part 1/2 Mobile ready, fixed incorrect padding on main layout mobile version

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -7,6 +7,7 @@ words:
   - adipiscing
   - aenean
   - aliquam
+  - Aliquet
   - amet
   - arcu
   - asds
@@ -18,32 +19,41 @@ words:
   - colums
   - congue
   - consectetur
+  - consequat
   - cursus
   - dictumst
+  - dignissim
+  - Dignissim
+  - duis
   - egestas
   - eleifend
   - elementum
   - elementur
   - enim
   - etiam
+  - euismod
   - facilisi
   - facilisis
   - Faucibus
   - fermentum
   - fontawesome
   - fortawesome
+  - fusce
   - fvisible
   - Georgi
   - hendrerit
   - iconify
   - imperdiet
   - justo
+  - lacinia
   - lacus
   - Laoreet
   - lectus
   - litle
+  - lobortis
   - luctus
   - mauris
+  - molestie
   - mollis
   - nibh
   - Nisl
@@ -55,13 +65,16 @@ words:
   - orci
   - ornare
   - Pellentesque
+  - pharetra
   - Phind
   - porttitor
   - posuere
   - pretium
   - Proin
+  - Quis
   - rhoncus
   - sagittis
+  - scelerisque
   - senectus
   - Sociis
   - sollicitudin
@@ -70,12 +83,19 @@ words:
   - svgr
   - tempor
   - tincidunt
+  - tortor
+  - tristique
   - turpis
+  - ullamcorper
   - ultrices
   - ultricies
   - unplugin
+  - Vehicula
+  - velit
   - venenatis
   - vestibulum
+  - viverra
+  - Viverra
   - volutpat
   - vulputate
   - webfonts
