Lagt till mörkt läge och uppdaterat knappar. Flyttat main.js till Vite. Fixat Font-Awesome bugg. Refaktorerat spacing och färghantering. Uppdaterat dark mode switch.

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -27,6 +27,7 @@ words:
   - dignissim
   - Dignissim
   - duis
+  - Duuuhhh
   - egestas
   - eleifend
   - elementum
@@ -45,6 +46,7 @@ words:
   - fvisible
   - Georgi
   - gifsicle
+  - Giraudel
   - hendrerit
   - iconify
   - Ikonfilen
