Added eslint typescript , added support to use TailwinsCSS utility clasees

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -57,6 +57,7 @@ words:
   - lacinia
   - lacus
   - Laoreet
+  - Lato
   - lectus
   - litle
   - lobortis
@@ -81,6 +82,7 @@ words:
   - pretium
   - produktionsfiler
   - Proin
+  - purgecss
   - Quis
   - repositoryn
   - rhoncus
@@ -94,6 +96,7 @@ words:
   - Starcraft
   - suspendisse
   - svgr
+  - tailwindcss
   - tempor
   - tincidunt
   - tortor
