--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@fullhuman/postcss-purgecss": "^6.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
     "globals": "^15.10.0",
+    "postcss": "^8.4.47",
+    "postcss-nesting": "^13.0.0",
     "prettier": "^3.3.3",
     "rollup": "^4.24.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass-embedded": "^1.79.4",
     "sharp": "^0.33.5",
     "svgo": "^3.3.2",
+    "tailwindcss": "^3.4.13",
     "terser": "^5.34.1",
     "vite": "^5.4.8",
     "vite-plugin-compression": "^0.5.1",
@@ -37,6 +42,7 @@
     "vite-plugin-image-optimizer": "^1.1.8",
     "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-preload": "^0.4.2",
+    "vite-plugin-purge-icons": "^0.2.2",
     "vite-plugin-pwa": "^0.20.5"
   },
   "dependencies": {
